--- a/src/templates/blockMathjax.ejs
+++ b/src/templates/blockMathjax.ejs
@@ -1,13 +1,5 @@
 
-<% if (label) {
-    -%>\begin{equation}<%
-} else {
-    -%>\begin{displaymath}<%
-} %>
+//texequation{
 <%= mathjax %>
-<% if (label) {
-    -%><%= label %>\end{equation}<%
-} else {
-    -%>\end{displaymath}<%
-} -%>
+//}
 <%# Line Break %>
