--- a/src/templates/table.ejs
+++ b/src/templates/table.ejs
@@ -1,10 +1,5 @@
 
-\begin{table}[tb]
-\begin{center}
-\caption{<%= caption %>}<%= label %>
-\begin{tabular}{<%= align %>}
+//table[<%= label %>][<%= caption %>]{
 <%= value %>
-\end{tabular}
-\end{center}
-\end{table}
+//}
 <%# Line Break %>
