--- a/src/templates/list.ejs
+++ b/src/templates/list.ejs
@@ -1,4 +1,1 @@
-\begin{<%= ordered ? 'enumerate' : 'itemize' %>}
-\setcounter{enumi}{<%= start || 1 %>}
-<%= value %>
-\end{<%= ordered ? 'enumerate' : 'itemize' %>}
+<%= value -%>
