--- a/lib/templates/image.ejs
+++ b/lib/templates/image.ejs
@@ -5,5 +5,5 @@ var id = (() => {
   return arr.join('.');
 })();
 -%>
-//image[<%= id %>]<%= config %>]{
+//image[<%= id %>][<%= caption.replace(/\]/g, '\\]') %>][<%= config %>]{
 //}
