--- a/lib/templates/image.ejs
+++ b/lib/templates/image.ejs
@@ -5,6 +5,7 @@ var id = (() => {
   return arr.join('.');
 })();
 -%>
-//image[<%= id %>][<%= caption.replace(/\]/g, '\\]') %>][<%= config %>]{
+<%# Line Break %>
+//image[<%= id %>][<%= (caption || '').replace(/\]/g, '\\]') %>][<%= config %>]{
 //}
 <%# Line Break %>
