Fix table template

--- a/lib/templates/tableCell.ejs
+++ b/lib/templates/tableCell.ejs
@@ -1,4 +1,1 @@
-<%= !value.trim() ? '.' : value.trim() -%>
-<% if (!isLast) {
-  -%><%= '\t' -%><%
-} -%>
+<%= !value.trim() ? '.' : value.trim() -%><% if (!isLast) { -%><%= '\t' -%><% } -%>
