--- a/src/templates/table.ejs
+++ b/src/templates/table.ejs
@@ -1,5 +1,5 @@
 
-//table[<%= label %>][<%= caption %>]{
+//table[<%= label.split(':').pop() %>][<%= caption %>]{
 <%= value %>
 //}
 <%# Line Break %>
