--- a/lib/templates/delete.ejs
+++ b/lib/templates/delete.ejs
@@ -1,2 +1,2 @@
-@<raw>{|latex|\sout{<%= value -%>\}}
-@<raw>{|html|<del><%= value -%></del>}
+@<raw>{|latex|\sout{<%= node.value -%>\}}
+@<raw>{|html|<del><%= node.value -%></del>}
