--- a/lib/templates/link.ejs
+++ b/lib/templates/link.ejs
@@ -1,7 +1,7 @@
 <%
-if (url === value) {
-  -%>@<href>{<%= String(url).replace(/,/g, '\\,') -%>}<%
+if (node.url === node.value) {
+  -%>@<href>{<%= String(node.url).replace(/,/g, '\\,') -%>}<%
 } else {
-  -%>@<href>{<%= String(url).replace(/,/g, '\\,') -%>, <%= value -%>}<%
+  -%>@<href>{<%= String(node.url).replace(/,/g, '\\,') -%>, <%= node.value -%>}<%
 }
 -%>
