--- a/lib/templates/list.ejs
+++ b/lib/templates/list.ejs
@@ -1,7 +1,7 @@
-<% if (depth === 1) {
+<% if (node.depth === 1) {
   %><%= '\n' -%><%
 }-%>
-<%= value -%>
-<% if (depth === 1) {
+<%= node.value -%>
+<% if (node.depth === 1) {
   %><%= '\n' -%><%
 }-%>
