--- a/lib/templates/table.ejs
+++ b/lib/templates/table.ejs
@@ -1,5 +1,5 @@
 
-//table[<%= label.split(':').pop() %>][<%= caption %>]{
-<%= value %>
+//table[<%= node.label.split(':').pop() %>][<%= node.caption %>]{
+<%= node.value %>
 //}
 <%# Line Break %>
