--- a/lib/templates/tableCell.ejs
+++ b/lib/templates/tableCell.ejs
@@ -1,1 +1,1 @@
-<%= !value.trim() ? '.' : value.trim() -%><% if (!isLast) { -%><%= '\t' -%><% } -%>
+<%= !node.value.trim() ? '.' : node.value.trim() -%><% if (!node.isLast) { -%><%= '\t' -%><% } -%>
