--- a/lib/templates/crossReference.ejs
+++ b/lib/templates/crossReference.ejs
@@ -1,6 +1,6 @@
 <%
-for (var idx = 0; idx < refs.length; idx++) {
-  var ref = refs[idx];
+for (var idx = 0; idx < node.refs.length; idx++) {
+  var ref = node.refs[idx];
   var trimmed = ref.split(':').pop();
 
   if (ref.includes('fig:')) {
@@ -10,12 +10,12 @@ for (var idx = 0; idx < refs.length; idx++) {
   } else if (ref.includes('code:')) {
     -%>@<list>{<%= trimmed -%>}<%
   } else {
-    -%>@<raw>{|latex|\ref{<%= refs[idx] -%>\}}<%
+    -%>@<raw>{|latex|\ref{<%= ref -%>\}}<%
   }
 }
 -%>
 <%
-if (cites.length !== 0) {
-  -%>@<raw>{|latex|\cite{<%= cites.join(',') -%>\}}<%
+if (node.cites.length !== 0) {
+  -%>@<raw>{|latex|\cite{<%= node.cites.join(',') -%>\}}<%
 }
 -%>
