--- a/src/templates/listItem.ejs
+++ b/src/templates/listItem.ejs
@@ -1,7 +1,7 @@
 <%
-if (ordered) {
-  -%> <%= index + 1 -%>. <%= value -%><%
+if (node.ordered) {
+  -%> <%= node.index + 1 -%>. <%= node.value -%><%
 } else {
-  -%> <%= '*'.repeat(depth) -%> <%= value.trim() -%><%
+  -%> <%= '*'.repeat(node.depth) -%> <%= node.value.trim() -%><%
 }
 -%>
