--- a/src/templates/tableRow.ejs
+++ b/src/templates/tableRow.ejs
@@ -1,4 +1,4 @@
-.<%= value.replace(/\n/g, '') %>
-<% if (isFirst) {
+.<%= node.value.replace(/\n/g, '') %>
+<% if (node.isFirst) {
   -%>------------
 <% } -%>
