--- a/src/templates/table.ejs
+++ b/src/templates/table.ejs
@@ -1,5 +1,5 @@
 
-//table[<%= node.label.split(':').pop() %>][<%= node.caption %>]{
+//table[<%= node.label %>][<%= node.caption %>]{
 <%= node.value %>
 //}
 <%# Line Break %>
