Fix syntax of code label

--- a/src/templates/crossReference.ejs
+++ b/src/templates/crossReference.ejs
@@ -7,7 +7,7 @@ for (var idx = 0; idx < node.refs.length; idx++) {
     -%>@<img>{<%= trimmed -%>}<%
   } else if (ref.startsWith('tbl:')) {
     -%>@<table>{<%= trimmed -%>}<%
-  } else if (ref.startsWith('code:')) {
+  } else if (ref.startsWith('lst:')) {
     -%>@<list>{<%= trimmed -%>}<%
   } else if (ref.startsWith('sec:')) {
     -%>@<hd>{<%= trimmed -%>}<%
