--- a/src/templates/crossReference.ejs
+++ b/src/templates/crossReference.ejs
@@ -11,6 +11,8 @@ for (var idx = 0; idx < node.refs.length; idx++) {
     -%>@<list>{<%= trimmed -%>}<%
   } else if (ref.startsWith('sec:')) {
     -%>@<hd>{<%= trimmed -%>}<%
+  } else if (ref.startsWith('eq:')) {
+    -%>@<eq>{<%= trimmed -%>}<%
   } else {
     -%>@<raw>{|latex|\ref{<%= ref -%>\}}<%
   }
