--- a/src/templates/html.ejs
+++ b/src/templates/html.ejs
@@ -1,7 +1,7 @@
-
 <%
 var RAW_COMMENT_REGEXP = /<!--\s*RAW:([\s\S]*?)-->/;
 if (typeof node.value === 'string' && RAW_COMMENT_REGEXP.test(node.value)) { -%>
 <%= RAW_COMMENT_REGEXP.exec(node.value)[1].trim() %>
+<% } else if (typeof node.value === 'string' && node.value.trim() === '<br>') { -%>
+<%= '@<br>{}' -%>
 <% } -%>
-<%# Line Break %>
